k8s/apps/leachnet/ln-ads/ads/deployment-adsbexchange.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adsbexchange
  namespace: ln-ads
spec:
  selector:
    matchLabels:
      app: adsbexchange
  replicas: 1
  template:
    metadata:
      labels:
        app: adsbexchange
    spec:
      containers:
        - name: adsbexchange
          image: mikenye/adsbexchange:latest
          tty: true
          ports:
          - containerPort: 8754
            protocol: TCP
            name: http
          - containerPort: 30105
            protocol: TCP
            name: mlat
          resources:
            requests:
              memory: "50Mi"
              cpu: "100m"
            limits:
              memory: "250Mi"
              cpu: "500m"
          volumeMounts:
          - name: run
            mountPath: /dev/bus/usb
      volumes:
      - name: run
        emptyDir: {}
