k8s/apps/leachnet/ln-ads/ads/deployment-flightaware.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flightaware
  namespace: ln-ads
spec:
  selector:
    matchLabels:
      app: flightaware
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: flightaware
    spec:
      containers:
        - name: piaware
          image: ghcr.io/sdr-enthusiasts/docker-piaware:latest
          ports:
          - containerPort: 80
            protocol: TCP
            name: http
          resources:
            requests:
              memory: "50Mi"
              cpu: "100m"
            limits:
              memory: "250Mi"
              cpu: "500m"
          livenessProbe:
            exec:
              command:
                - /scripts/healthcheck.sh
            periodSeconds: 60
            failureThreshold: 3
            timeoutSeconds: 30
          startupProbe:
            exec:
              command:
                - /scripts/healthcheck.sh
            initialDelaySeconds: 60
            periodSeconds: 10
            failureThreshold: 30
            timeoutSeconds: 30
          volumeMounts:
            - name: run
              mountPath: /run
            - name: varlog
              mountPath: /var/log
      volumes:
        - name: run
          emptyDir:
            medium: "Memory"
            sizeLimit: 64M
        - name: varlog
          emptyDir: {}
