k8s/apps/leachnet/ln-ads/ads/deployment-fr24feed.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fr24feed
  namespace: ln-ads
spec:
  selector:
    matchLabels:
      app: fr24feed
  replicas: 1
  template:
    metadata:
      labels:
        app: fr24feed
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 50
              preference:
                matchExpressions:
                - key: kubernetes.io/arch
                  operator: In
                  values:
                  # Runs in qemu if not on arm64
                  - arm64
      containers:
        - name: fr24feed
          image: ghcr.io/sdr-enthusiasts/docker-flightradar24:latest
          # command: ["config/", "dashboard"]
          tty: true
          ports:
          - containerPort: 8754
            protocol: TCP
            name: http
          resources:
            requests:
              memory: "50Mi"
              cpu: "100m"
            limits:
              memory: "250Mi"
              cpu: "500m"
          livenessProbe:
            exec:
              command:
                - /scripts/healthcheck.sh
            periodSeconds: 60
            failureThreshold: 3
            timeoutSeconds: 30
          startupProbe:
            exec:
              command:
                - /scripts/healthcheck.sh
            initialDelaySeconds: 60
            periodSeconds: 10
            failureThreshold: 30
            timeoutSeconds: 30
