k8s/apps/leachnet/ln-ads/ads/deployment-readsb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: readsb
  namespace: ln-ads
spec:
  selector:
    matchLabels:
      app: readsb
  replicas: 1
  template:
    metadata:
      labels:
        app: readsb
    spec:
      nodeSelector:
        k8s.duck.moe/hardware_ads: "true"
      containers:
        - name: readsb
          image: mikenye/readsb-protobuf:latest
          tty: true
          ports:
          - containerPort: 8080
            protocol: TCP
            name: http
          - containerPort: 30005
            protocol: TCP
            name: beast
          resources:
            requests:
              memory: "50Mi"
              cpu: "100m"
            limits:
              memory: "250Mi"
              cpu: "500m"
          securityContext:
            privileged: true
            procMount: Default
          volumeMounts:
          - name: usb-ads-b
            mountPath: /dev/bus/usb
          - name: readsb-autogain
            mountPath: /run/autogain
          #livenessProbe:
          #  exec:
          #    command:
          #      - /scripts/healthcheck.sh
          #  initialDelaySeconds: 3600
          #  periodSeconds: 60
      volumes:
      - name: usb-ads-b
        hostPath:
          path: /dev/bus/usb
          type: Directory
      - name: readsb-autogain
        persistentVolumeClaim:
          claimName: readsb-autogain
