k8s/apps/leachnet/ln-ads/ads/deployment-tar1090.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tar1090
  namespace: ln-ads
spec:
  selector:
    matchLabels:
      app: tar1090
  replicas: 1
  template:
    metadata:
      labels:
        app: tar1090
    spec:
      containers:
        - name: tar1090
          image: mikenye/tar1090:latest
          ports:
          - containerPort: 80
            protocol: TCP
            name: http
          resources:
            requests:
              memory: "50Mi"
              cpu: "100m"
            limits:
              memory: "250Mi"
              cpu: "500m"
          volumeMounts:
            - name: run
              mountPath: /run
            - name: varlog
              mountPath: /var/log
      volumes:
        - name: run
          emptyDir:
            medium: "Memory"
        - name: varlog
          emptyDir: {}
