k8s/apps/leachnet/ln-ads/ads/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: readsb
spec:
  ports:
  - name: http
    port: 8080
    targetPort: http
  - name: beast
    port: 30005
    targetPort: beast
  selector:
    app: readsb

---
apiVersion: v1
kind: Service
metadata:
  name: fr24feed
spec:
  ports:
  - name: http
    port: 8754
    targetPort: http
  selector:
    app: fr24feed

---

apiVersion: v1
kind: Service
metadata:
  name: adsbexchange
spec:
  ports:
  - name: http
    port: 31090
    targetPort: http
  - name: mlat
    port: 30105
    targetPort: mlat
  selector:
    app: adsbexchange

---

apiVersion: v1
kind: Service
metadata:
  name: tar1090
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app: tar1090
